--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41"
+    "vue": "^3.2.41",
+    "zoid": "^9.0.86"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
