--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zoid-edition-test",
   "private": false,
-  "version": "0.0.2",
+  "version": "0.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -17,5 +17,8 @@
     "typescript": "^4.6.4",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
-  }
+  },
+  "files": [
+    "dist/"
+  ]
 }
