--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "zoid-edition-test",
   "private": false,
-  "version": "0.0.4",
+  "version": "0.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "build:zoid": "webpack",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
@@ -14,9 +15,12 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "typescript": "^4.6.4",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.9.3",
     "vite": "^3.2.3",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.9",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.0"
   },
   "files": [
     "dist/"
