Added : Try another folder to store cdc

--- a/.github/workflows/publish-cdn.yaml
+++ b/.github/workflows/publish-cdn.yaml
@@ -20,7 +20,7 @@ jobs:
           node-version: 16
           registry-url: "https://registry.npmjs.org"
 
-      - name: 👁 Check package version
+      - name: 👁 Check edition-component package version
         id: cpv
         uses: PostHog/check-package-version@v2
 
@@ -32,5 +32,21 @@ jobs:
       - name: 🍾 Publish new version of config package
         if: steps.cpv.outputs.is-new-version == 'true'
         run: npm i && npm run build && npm publish --access public
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+
+      - name: 👁 Check edition-cdc package version
+        id: cpv
+        uses: PostHog/check-package-version@v2
+        path: ./_dev/test-edition-cdc
+
+      - name: 🖥 Display versions
+        run: |
+          echo "Committed version: ${{ steps.cpv.outputs.committed-version }}"
+          echo "Published version: ${{ steps.cpv.outputs.published-version }}"
+          echo "Is new version: ${{ steps.cpv.outputs.is-new-version }}"
+      - name: 🍾 Publish new version of config package
+        if: steps.cpv.outputs.is-new-version == 'true'
+        run: cd ./_dev/test-edition-cdc && npm i && npm run build && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
