--- a/package.json
+++ b/package.json
@@ -15,12 +15,8 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "ts-loader": "^9.4.1",
-    "typescript": "^4.9.3",
     "vite": "^3.2.3",
-    "vue-tsc": "^1.0.9",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0"
+    "vue-tsc": "^1.0.9"
   },
   "files": [
     "dist/"
