Added : Try another folder to store cdc

--- a/.github/workflows/publish-cdn.yaml
+++ b/.github/workflows/publish-cdn.yaml
@@ -36,18 +36,18 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: 👁 Check edition-cdc package version
-        id: cpv
+        id: cpv-cdc
         uses: PostHog/check-package-version@v2
         with:
           path: ./_dev/test-edition-cdc
 
       - name: 🖥 Display versions
         run: |
-          echo "Committed version: ${{ steps.cpv.outputs.committed-version }}"
-          echo "Published version: ${{ steps.cpv.outputs.published-version }}"
-          echo "Is new version: ${{ steps.cpv.outputs.is-new-version }}"
+          echo "Committed version: ${{ steps.cpv-cdc.outputs.committed-version }}"
+          echo "Published version: ${{ steps.cpv-cdc.outputs.published-version }}"
+          echo "Is new version: ${{ steps.cpv-cdc.outputs.is-new-version }}"
       - name: 🍾 Publish new version of config package
-        if: steps.cpv.outputs.is-new-version == 'true'
+        if: steps.cpv-cdc.outputs.is-new-version == 'true'
         run: cd ./_dev/test-edition-cdc && npm i && npm run build && npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
