--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc && vite build",
+    "build": "vue-tsc && vite build --base=/zoid-edition-test/",
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.41",
-    "zoid": "^9.0.86"
+    "vue": "^3.2.41"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
