--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "dependencies": {
     "vue": "^3.2.41",
-    "zoid": "^9.0.86"
+    "zoid": "^9.0.86",
+    "test-edition-cdc": "^0.0.15"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
