--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "test-edition-cdc": "^0.0.18",
     "vue": "^3.2.41",
     "zoid": "^9.0.86",
-    "test-edition-cdc": "^0.0.17"
+    "prestakit": "^1.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
+    "sass": "^1.56.1",
     "vite": "^3.2.3",
     "vue-tsc": "^1.0.9"
   },
