Added : Vue router + More zoid component

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "prestakit": "^1.2.0",
     "test-edition-cdc": "^0.0.18",
     "vue": "^3.2.41",
-    "zoid": "^9.0.86",
-    "prestakit": "^1.2.0"
+    "vue-router": "^4.1.6",
+    "zoid": "^9.0.86"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
