--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prestakit": "^1.2.0",
     "test-edition-cdc": "^0.0.20",
     "vue": "^3.2.41",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.6",
     "zoid": "^9.0.86"
   },
