--- a/crowdin.yml
+++ b/crowdin.yml
@@ -4,6 +4,6 @@ append_commit_message: false
 pull_request_labels:
   - translations
 files:
-  - source: /src/locales/*.json
+  - source: /src/locales/en.json
     translation: /src/locales/%two_letters_code%.json
     type: json
